<resources>
    <string name="app_name">RESToid</string>

    <string name="drawer_header">Bookmarked Connections</string>

    <string name="title_section1">Request</string>
    <string name="title_section2">Headers</string>
    <string name="title_section3">Params</string>
    <string name="title_section4">Body</string>
    <string name="title_section5">&#8230;</string><!-- elipses -->

    <string name="hint_name">Connection Name</string>
    <string name="hint_url">URL</string>
    <string name="label_results">Results</string>
    <string name="label_results_headers">Headers</string>
    <string name="label_results_body">Body</string>
    <string name="hint_results_headers">Request result headers displayed here.</string>
    <string name="hint_results_body">Request result body content displayed here.</string>
    <string name="hint_header_key">Header Key</string>
    <string name="hint_header_value">Header Value</string>
    <string name="hint_params_key">Parameter Name</string>
    <string name="hint_params_value">Parameter Value</string>
    <string name="hint_body_input">Enter any body data here.</string>
    <string name="button_item_delete">DELETE</string>
    <string name="radio_get">GET</string>
    <string name="radio_post">POST</string>
    <string name="radio_patch">PATCH</string>
    <string name="radio_delete">DELETE</string>
    <string name="radio_raw">Raw</string>
    <string name="radio_formatted">Formatted</string>
    <string name="radio_json">JSON</string>
    <string name="message_placeholder_headers">No headers set.\nTap ADD to add a header.</string>
    <string name="message_placeholder_params">No query parameters set.\nTap ADD to add a query parameter.</string>
    <string name="dialog_message_delete">Are you sure you want to delete this connection?</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>
    <string name="toast_bookmark_deleted">Connection bookmark was deleted.</string>
    <string name="toast_bookmark_delete_canceled">Bookmark delete operation cancelled.</string>

    <string name="message_error_nourl">Please specify a URL for your request.</string>

    <string name="action_add">Add</string>
    <string name="action_send">Send</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="dialog_message_help">Tap and hold the New (+) button to duplicate the current connection.\n\nTap and hold a bookmarked connection to delete it.</string>
    <string name="dialog_button_help">OK</string>

</resources>
